force-app/main/default/objects/Ticket_Request__c/Ticket_Request__c.object-meta.xml
<CustomObject>
    <label>Ticket Request</label>
    <nameField>
        <displayFormat>TKR-{0000000}</displayFormat>
        <label>Ticket Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>