force-app/main/default/objects/Ticket_Request__c/fields/Assignment_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Charge_Amount__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Seat_Lot_Assignment__c.Seat_Lot_Price_Currency__c</summarizedField>
    <summaryForeignKey>Seat_Lot_Assignment__c.Ticket_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>