force-app/main/default/objects/Ticket_Request__c/fields/BEAT_Requested_By_Email__c.field-meta.xml
<CustomField>
    <fullName>BEAT_Requested_By_Email__c</fullName>
    <label>BEAT Requested By Email</label>
    <type>Email</type>
</CustomField>