force-app/main/default/objects/Ticket_Request__c/fields/Constituent_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Donor_ID__c</fullName>
    <formula>Constituent__r.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Constituent Donor ID</label>
    <type>Text</type>
</CustomField>