force-app/main/default/objects/Ticket_Request__c/fields/Constituent_Name__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Name__c</fullName>
    <formula>Constituent__r.nd_Name_and_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Name</label>
    <type>Text</type>
</CustomField>