force-app/main/default/objects/Ticket_Request__c/fields/Constituent_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Preferred_Email__c</fullName>
    <formula>Constituent__r.Email</formula>
    <label>Constituent Preferred Email</label>
    <type>Text</type>
</CustomField>