force-app/main/default/objects/Ticket_Request__c/fields/Constituent_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Preferred_Phone__c</fullName>
    <formula>Constituent__r.Phone</formula>
    <label>Constituent Preferred Phone</label>
    <type>Text</type>
</CustomField>