force-app/main/default/objects/Ticket_Request__c/fields/Credit_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Status__c</fullName>
    <label>Credit Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Card on File</fullName>
            </value>
            <value>
                <fullName>Recipient Contacted</fullName>
            </value>
            <value>
                <fullName>Card Authorized</fullName>
            </value>
            <value>
                <fullName>Card On File</fullName>
                <isActive>false</isActive>
                <label>Card On File</label>
            </value>
            <value>
                <fullName>Needed</fullName>
                <isActive>false</isActive>
                <label>Needed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>