force-app/main/default/objects/Ticket_Request__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <description>Day of the week. For example Sunday, Monday, Tuesday... Saturday.</description>
    <formula>Event__r.nd_Weekday__c</formula>
    <inlineHelpText>Day of the week. For example Sunday, Monday, Tuesday... Saturday.</inlineHelpText>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>