force-app/main/default/objects/Ticket_Request__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <formula>IF(ISBLANK(Constituent__c),
HYPERLINK(&quot;/&quot; + Organization__c, Organization__r.Name, &quot;_parent&quot;),
HYPERLINK(&quot;/&quot; + Constituent__c,  Constituent__r.ucinn_ascendv2__Full_Name_Formula__c , &quot;_parent&quot;))</formula>
    <label>Donor</label>
    <type>Text</type>
</CustomField>