force-app/main/default/objects/Ticket_Request__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <formula>IF(ISBLANK( Constituent__c ),  Organization__r.ucinn_ascendv2__Donor_ID__c , Constituent__r.ucinn_ascendv2__Donor_ID__c )</formula>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>