force-app/main/default/objects/Ticket_Request__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>Constituent__r.ucinn_ascendv2__Full_Name_Formula__c</formula>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>