force-app/main/default/objects/Ticket_Request__c/fields/Event_Month__c.field-meta.xml
<CustomField>
    <fullName>Event_Month__c</fullName>
    <formula>MONTH( Event__r.StartDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>