force-app/main/default/objects/Ticket_Request__c/fields/FOAPAL__c.field-meta.xml
<CustomField>
    <fullName>FOAPAL__c</fullName>
    <label>FOAPAL</label>
    <length>40</length>
    <type>Text</type>
</CustomField>