force-app/main/default/objects/Ticket_Request__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>TEXT( Event__r.nd_Grouping_Type__c )</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>