force-app/main/default/objects/Ticket_Request__c/fields/Handling_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Handling_Fee_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Handling Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>