force-app/main/default/objects/Ticket_Request__c/fields/Household_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Household_Donor_ID__c</fullName>
    <formula>Constituent__r.Account.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Household Donor ID</label>
    <type>Text</type>
</CustomField>