force-app/main/default/objects/Ticket_Request__c/fields/Household_Lifetime_Cash__c.field-meta.xml
<CustomField>
    <fullName>Household_Lifetime_Cash__c</fullName>
    <formula>Constituent__r.Account.ucinn_ascendv2__Lifetime_Cash__c</formula>
    <label>Household Lifetime Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>