force-app/main/default/objects/Ticket_Request__c/fields/Household_Lifetime_Production__c.field-meta.xml
<CustomField>
    <fullName>Household_Lifetime_Production__c</fullName>
    <formula>ROUND(Constituent__r.Account.ucinn_ascendv2__Lifetime_Fundraising__c, 0)</formula>
    <label>Household Lifetime Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>