force-app/main/default/objects/Ticket_Request__c/fields/Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Name__c</fullName>
    <formula>Constituent__r.Account.Name</formula>
    <label>Household Name</label>
    <type>Text</type>
</CustomField>