force-app/main/default/objects/Ticket_Request__c/fields/Lifetime_Cash__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Cash__c</fullName>
    <formula>IF (ISBLANK ( Constituent__c ),  Organization__r.ucinn_ascendv2__Lifetime_Cash__c , Constituent__r.Account.ucinn_ascendv2__Lifetime_Cash__c )</formula>
    <label>Lifetime Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>