force-app/main/default/objects/Ticket_Request__c/fields/Lifetime_Production__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Production__c</fullName>
    <description>W-001445</description>
    <formula>IF (ISBLANK (Constituent__c), ROUND( Organization__r.ucinn_ascendv2__Lifetime_Fundraising__c, 0), ROUND(Constituent__r.Account.ucinn_ascendv2__Lifetime_Fundraising__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>