force-app/main/default/objects/Ticket_Request__c/fields/nd_BEAT_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>nd_BEAT_Event_Status__c</fullName>
    <description>W-002026 Allows the ability to filter a list view of Ticket Requests based on the status (Active/Inactive) of the BEAT event (Campaign).</description>
    <formula>TEXT(Event__r.Status)</formula>
    <label>BEAT Event Status</label>
    <type>Text</type>
</CustomField>