force-app/main/default/objects/Ticket_Request__c/fields/nd_Event_and_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Event_and_Date__c</fullName>
    <formula>LPAD(TEXT(MONTH(Event_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(DAY(Event_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Event_Date__c)) &amp; &quot; &quot; &amp; 
IF(AND(TEXT(Event__r.nd_Home_Away__c) = &quot;Away&quot;, LEFT(Event__r.nd_Opponent__c, 1) &lt;&gt; &quot;@&quot;), &quot;@&quot;, &quot;&quot;) &amp; 
Event__r.nd_Opponent__c</formula>
    <label>Event &amp; Date</label>
    <type>Text</type>
</CustomField>