force-app/main/default/objects/Ticket_Request__c/fields/nd_ID_and_Inst_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_ID_and_Inst_Suffix__c</fullName>
    <description>W-002004 BEAT - TKR - add Institutional suffix to constituent name</description>
    <formula>Constituent__r.ucinn_ascendv2__Donor_ID__c &amp;&quot;-&quot; &amp; Constituent__r.nd_Institutional_Suffix__c</formula>
    <label>ID and Inst Suffix</label>
    <type>Text</type>
</CustomField>