force-app/main/default/objects/Ticket_Request__c/fields/nd_Name_ID_and_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_Name_ID_and_Suffix__c</fullName>
    <description>W-001445</description>
    <formula>IF(ISBLANK(Constituent__c),
HYPERLINK(&quot;/&quot; + Organization__c, Organization__r.nd_Name_and_ID__c, &quot;_parent&quot;),
HYPERLINK(&quot;/&quot; + Constituent__c, Constituent__r.nd_Name_and_ID__c , &quot;_parent&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name ID and Suffix</label>
    <type>Text</type>
</CustomField>