force-app/main/default/objects/Ticket_Request__c/fields/ND_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>ND_Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BEAT_Ticket_Level_Type</valueSetName>
    </valueSet>
</CustomField>