force-app/main/default/objects/Ticket_Request__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ticket Requests</relationshipLabel>
    <relationshipName>Ticket_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>