force-app/main/default/objects/Ticket_Request__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Due</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <isActive>false</isActive>
                <label>Denied</label>
            </value>
            <value>
                <fullName>Donor Refused</fullName>
                <isActive>false</isActive>
                <label>Donor Refused</label>
            </value>
            <value>
                <fullName>Holding</fullName>
                <isActive>false</isActive>
                <label>Holding</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Transferred</fullName>
                <isActive>false</isActive>
                <label>Transferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>