force-app/main/default/objects/Ticket_Request__c/fields/Pre_Season_Pass__c.field-meta.xml
<CustomField>
    <fullName>Pre_Season_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Season Approval</label>
    <type>Checkbox</type>
</CustomField>