force-app/main/default/objects/Ticket_Request__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <formula>IF(ISBLANK(Constituent__c),  Organization__r.ucinn_ascendv2__Email__c , Constituent__r.Email)</formula>
    <label>Preferred Email</label>
    <type>Text</type>
</CustomField>