force-app/main/default/objects/Ticket_Request__c/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <formula>IF( ISBLANK( Constituent__c ), Organization__r.Phone, Constituent__r.Phone)</formula>
    <label>Preferred Phone</label>
    <type>Text</type>
</CustomField>