force-app/main/default/objects/Ticket_Request__c/fields/Requested_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Name__c</fullName>
    <formula>Requested_By__r.LastName +&apos; &apos;+ Requested_By__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By Name</label>
    <type>Text</type>
</CustomField>