force-app/main/default/objects/Ticket_Request__c/fields/Requestor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Comments__c</fullName>
    <label>Requestor Comments</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>