force-app/main/default/objects/Ticket_Request__c/fields/Revenue_FOAPAL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_FOAPAL__c</fullName>
    <label>Revenue FOAPAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>