force-app/main/default/objects/Ticket_Request__c/fields/Seat_Approved__c.field-meta.xml
<CustomField>
    <fullName>Seat_Approved__c</fullName>
    <label>#  Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>