force-app/main/default/objects/Ticket_Request__c/fields/Seat_Location__c.field-meta.xml
<CustomField>
    <fullName>Seat_Location__c</fullName>
    <label>Seat Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>