force-app/main/default/objects/Ticket_Request__c/fields/Seats_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Seats_Remaining__c</fullName>
    <formula>Seat_Lot_Requested__c -  Seat_Lots_Assigned__c</formula>
    <inlineHelpText>Number of tickets requested minus tickets assigned</inlineHelpText>
    <label># Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>