force-app/main/default/objects/Ticket_Request__c/fields/Send_to_G_L__c.field-meta.xml
<CustomField>
    <fullName>Send_to_G_L__c</fullName>
    <label>Send to G/L</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>