force-app/main/default/objects/Ticket_Request__c/fields/Sent_to_G_L_Message__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_G_L_Message__c</fullName>
    <label>Sent to G/L Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>