force-app/main/default/objects/Ticket_Request__c/fields/Sit_With__c.field-meta.xml
<CustomField>
    <fullName>Sit_With__c</fullName>
    <inlineHelpText>Enter a name to cross-reference another BEAT request if you need to seat constituents together, such as when a fundraiser sits with a donor.</inlineHelpText>
    <label>Sit With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>