force-app/main/default/objects/Ticket_Request__c/fields/Swap__c.field-meta.xml
<CustomField>
    <fullName>Swap__c</fullName>
    <inlineHelpText>Only use this field when the constituent plans to send us tickets in exchange for other tickets. Example: two pairs for four together</inlineHelpText>
    <label>Swap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>