force-app/main/default/objects/Ticket_Request__c/fields/Ticket_Level__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Level__c</fullName>
    <formula>Section__r.Name</formula>
    <label>Ticket Level</label>
    <type>Text</type>
</CustomField>