force-app/main/default/objects/Ticket_Request__c/fields/Ticket_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Level_Type__c</fullName>
    <formula>TEXT( Section__r.Type__c )</formula>
    <label>Ticket Level Type</label>
    <type>Text</type>
</CustomField>