force-app/main/default/objects/Ticket_Request__c/fields/Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
                <label>AI-Additional Inventory</label>
            </value>
            <value>
                <fullName>AOP</fullName>
                <label>AOP-Access Only Pass</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D-Donor</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>FR-Fundraiser</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>NC-No Charge</label>
            </value>
            <value>
                <fullName>PLC</fullName>
                <label>PLC-President&apos;s Leadership Council</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>US-University Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>